feat: Add Strava integration to Admin Dashboard with proper redirect handling
- Added Strava connection check and connect button in Admin Settings
- Implemented localStorage-based return URL for Admin Strava OAuth flow
- Fixed redirect loop that was sending admins to onboarding after Strava auth
- Admins now skip onboarding requirement (role check in App.tsx)
- Added KOM Segment auto-fetch from Strava with connection prompt
- Created fetch-strava-segment Edge Function for segment data retrieval
- Enhanced StravaCallback with debug logging and smart redirect logic
- Added SegmentManager component with Strava URL parsing and auto-fill
- Database migration for stage_segments with multi-segment support

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -337,6 +337,15 @@ deno_version = 2
 # [edge_runtime.secrets]
 # secret_key = "env(SECRET_VALUE)"
 
+# Configure edge functions individually
+[functions.fetch-strava-segment]
+# Disable JWT verification - we handle it manually in the function
+verify_jwt = false
+
+[functions.strava-process-stage]
+# Disable JWT verification for this function too
+verify_jwt = false
+
 [analytics]
 enabled = true
 port = 54327
